2015-11-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.1.0 released
        =========================


2015-11-19  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.0.0 released
        =========================

        Handle ~ in filenames (#1580)
        Perform __init__.py creation only in build step (#1569)
        Remove access by name methods from GSkyRegions (#1564)
        Resolve Python test problem on El Capitan (#1563)


2015-10-28  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.11.0 released
        =========================

        Add need_help() method to GApplication (#572)
        Correct GModelSpatialDiffuseCube computations (#1559)
        Add save() and write() methods to GModelSpatialDiffuseCube
        Add interval constructor and set methods to GEnergies class
        Add Python unit test function to gammalib module (#1486)
        Increase CTA IRF integration precision for shell model (#1521)
        Correctly handle MC simulations for unnormalized diffuse maps (#1548)
        Improve precision of shell model in unbinned analysis (#1521)
        Add GCTAModelAeffBackground class
        Remove small angle approximation from GModelSpatialRadialShell
        Rename GSkymap to GSkyMap
        Add binary operators to GSkymap class
        GSkymap::operator/=(GSkymap) operator now ignores division by zero
        Remove deadtime correction from GCTAModelCubeBackground (#1503)
        Add GCTAObservation::object() method
        Correct model gradient computation
        Correct check of pixel containment in sky map (GSkymap::contains())
        Do only search in users pfiles if PFILES environment variable is not set
        Correct GModelSpatialDiffuseConst::mc() method (#1480)
        Add is_valid() method to GCTARoi and write keywords only if ROI is valid (#1476)
        Increased number of integration iterations for energy dispersion (#1472)